<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android">
    <com.nyelito.remindmeapp.preferences.LookAheadDialogPreference
        android:key="@string/lookAheadMonths_string"
        android:title="@string/lookAheadMonths_title"
        android:negativeButtonText="@string/cancel"
        android:positiveButtonText="@string/ok"
        android:defaultValue="6"
        />
    
    <com.nyelito.remindmeapp.preferences.ReminderDaysBeforeReleaseDialogPreference
        android:key="@string/reminderDays_string"
        android:title="@string/reminderDays_title"
        android:negativeButtonText="@string/cancel"
        android:positiveButtonText="@string/ok"
        android:defaultValue="7"
        />
    
    <ListPreference 
       	android:key="@string/calendar_picker_key_string"
        android:summary="@string/calendar_picker_summary"
        android:title="@string/calendar_picker_title"
        android:defaultValue="1" />
    
    
</PreferenceScreen>